[gd_scene load_steps=10 format=3 uid="uid://duhcbfmihcxcu"]

[ext_resource type="Shader" path="res://scenes/menu/pause_menu.gdshader" id="1_0mk3f"]
[ext_resource type="Script" path="res://scripts/menu_pause_pc.gd" id="1_1jq53"]
[ext_resource type="FontFile" uid="uid://xg2eku68amxe" path="res://fonte/Gamer.ttf" id="2_bebhb"]
[ext_resource type="Texture2D" uid="uid://ccpdcum0eeytj" path="res://assets/grabber.png" id="3_3ly7k"]
[ext_resource type="FontFile" uid="uid://cjtxrc0chsxxg" path="res://fonte/Poppins-Regular.ttf" id="3_qfhj0"]
[ext_resource type="Texture2D" uid="uid://cklng2hps6a0e" path="res://assets/grabbe_highlightr.png" id="4_0fetc"]
[ext_resource type="PackedScene" uid="uid://bxjbxi3ayxu4d" path="res://scenes/menu/button.tscn" id="5_lucju"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v8qtg"]
shader = ExtResource("1_0mk3f")
shader_parameter/amount = 2.0

[sub_resource type="ImageTexture" id="ImageTexture_5hje2"]

[node name="MenuPausePC" type="CanvasLayer"]
layer = 10

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_v8qtg")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_1jq53")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 7

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 37

[node name="TituloControles" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 20
text = "Configurações"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="action_list_configs" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2
theme_override_constants/margin_left = 6

[node name="Control2" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2

[node name="title_vol2" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 13
text = "Modo de Tela:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer2" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
mouse_filter = 1

[node name="Display" type="OptionButton" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bebhb")
theme_override_font_sizes/font_size = 16

[node name="Control3" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2

[node name="Vsync" type="CheckButton" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 12
button_pressed = true
text = "Sincronizaçao
Vertical"

[node name="Control" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 12
text = "Alternar entre
controles"

[node name="Control" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="title_vol" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 14
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBox_Master" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2

[node name="title_vol_master" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Master"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 12
text = "Geral"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Master"]
custom_minimum_size = Vector2(11.72, 0)
layout_mode = 2
mouse_filter = 1

[node name="vol_master" type="HSlider" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Master"]
texture_filter = 1
custom_minimum_size = Vector2(247, 0)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_3ly7k")
theme_override_icons/grabber_highlight = ExtResource("4_0fetc")
theme_override_icons/tick = SubResource("ImageTexture_5hje2")
tick_count = 10
ticks_on_borders = true

[node name="hBox_Music" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2

[node name="title_vol_music" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/hBox_Music"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 12
text = "Musica"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer2" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/hBox_Music"]
custom_minimum_size = Vector2(1.37, 0)
layout_mode = 2
mouse_filter = 1

[node name="vol_music" type="HSlider" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/hBox_Music"]
texture_filter = 1
custom_minimum_size = Vector2(247, 0)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_3ly7k")
theme_override_icons/grabber_highlight = ExtResource("4_0fetc")
theme_override_icons/tick = SubResource("ImageTexture_5hje2")
tick_count = 10
ticks_on_borders = true

[node name="HBox_sfx" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2

[node name="title_vol_sfx" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_sfx"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 12
text = "Efeitos "
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer3" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_sfx"]
custom_minimum_size = Vector2(1.66, 0)
layout_mode = 2
mouse_filter = 1

[node name="vol_sfx" type="HSlider" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_sfx"]
texture_filter = 1
custom_minimum_size = Vector2(247, 0)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_3ly7k")
theme_override_icons/grabber_highlight = ExtResource("4_0fetc")
theme_override_icons/tick = SubResource("ImageTexture_5hje2")
tick_count = 10
ticks_on_borders = true

[node name="VSeparator" type="VSeparator" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TituloControles" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 14
text = "Controles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="action_list_controls" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer/action_list_controls" instance=ExtResource("5_lucju")]
layout_mode = 2

[node name="Button2" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer/action_list_controls" instance=ExtResource("5_lucju")]
layout_mode = 2

[node name="Button3" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer/action_list_controls" instance=ExtResource("5_lucju")]
layout_mode = 2

[node name="Button4" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer/action_list_controls" instance=ExtResource("5_lucju")]
layout_mode = 2

[node name="Button5" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer/action_list_controls" instance=ExtResource("5_lucju")]
layout_mode = 2

[node name="Button6" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer/action_list_controls" instance=ExtResource("5_lucju")]
layout_mode = 2

[node name="Button7" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer/action_list_controls" instance=ExtResource("5_lucju")]
layout_mode = 2

[node name="Button8" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer/action_list_controls" instance=ExtResource("5_lucju")]
layout_mode = 2

[node name="Button9" parent="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/ScrollContainer/action_list_controls" instance=ExtResource("5_lucju")]
layout_mode = 2

[node name="ResetButton" type="Button" parent="Control/PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
focus_mode = 0
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 16
text = "Reset to default"

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_qfhj0")
theme_override_font_sizes/font_size = 16
text = "Voltar"

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer2/Vsync" to="Control" method="_on_vsync_pressed"]
[connection signal="toggled" from="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer2/CheckButton" to="Control" method="_on_check_button_toggled"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Master/vol_master" to="Control" method="_on_vol_master_value_changed"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/hBox_Music/vol_music" to="Control" method="_on_vol_music_value_changed"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_sfx/vol_sfx" to="Control" method="_on_vol_sfx_value_changed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/MarginContainer/ResetButton" to="Control" method="_on_reset_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/Button" to="Control" method="_on_button_pressed"]
